--- a/zookeeper/3.4.12/cluster-docker-compose/docker-compose.yml
+++ b/zookeeper/3.4.12/cluster-docker-compose/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     environment:
       ZOO_MY_ID: 1
       ZOO_SERVERS: server.1=zk1:2888:3888 server.2=zk2:2888:3888 server.3=zk3:2888:3888
+    networks:
+      - my-net
 
   zk2:
     image: zookeeper:3.4.12
@@ -19,6 +21,8 @@ services:
     environment:
       ZOO_MY_ID: 2
       ZOO_SERVERS: server.1=zk1:2888:3888 server.2=zk2:2888:3888 server.3=zk3:2888:3888
+    networks:
+      - my-net
 
   zk3:
     image: zookeeper:3.4.12
@@ -29,3 +33,20 @@ services:
     environment:
       ZOO_MY_ID: 3
       ZOO_SERVERS: server.1=zk1:2888:3888 server.2=zk2:2888:3888 server.3=zk3:2888:3888
+    networks:
+      - my-net
+
+
+  zkui:
+     container_name: zkui
+     image: zkui
+     ports:
+       - "9090:9090"
+     environment:
+         ZK_SERVER: zk1:2181,zk2:2181,zk3:2181
+     networks:
+       - my-net
+
+networks:
+  my-net:
+    driver: bridge
