--- a/Docker-Repository/dubbo/dubbo-monitor/docker-compose/dubbo.properties
+++ b/Docker-Repository/dubbo/dubbo-monitor/docker-compose/dubbo.properties
@@ -27,4 +27,4 @@ dubbo.jetty.directory=/root/monitor
 dubbo.charts.directory=/root/monitor/charts
 dubbo.statistics.directory=/root/monitor/statistics
 dubbo.log4j.file=logs/dubbo-monitor-simple.log
-dubbo.log4j.level=WARN
+dubbo.log4j.level=info
