--- a/dubbo/dubbo-monitor-285/docker-compose/docker-compose.yml
+++ b/dubbo/dubbo-monitor-285/docker-compose/docker-compose.yml
@@ -55,6 +55,20 @@ services:
     networks:
     - my-net
 
+  zkui:
+     container_name: zkui
+     image: zkui
+     depends_on:
+       - zk1
+       - zk2
+       - zk3
+     ports:
+       - "9090:9090"
+     environment:
+         ZK_SERVER: zk1:2181,zk2:2181,zk3:2181
+     networks:
+       - my-net
+
 networks:
   my-net:
     driver: bridge
